Fixed #105 -- collapsable fieldsets now work in both ways (thanks, Simon)
git-svn-id: http://code.djangoproject.com/svn/django/trunk@387 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/conf/admin_media/css/global.css
+++ b/django/conf/admin_media/css/global.css
@@ -228,10 +228,9 @@ form .wide p.help { padding-left:38px; }
 /*  COLLAPSED FIELDSETS  */
 
 fieldset.collapsed * { display:none; }
-fieldset.collapsed h2, fieldset.collapsed .collapse-toggle  { display:block !important; }
+fieldset.collapsed h2, fieldset.collapsed { display:block !important; }
+fieldset.collapsed .collapse-toggle { display: inline !important; }
 fieldset.collapsed h2 { background-image:url(../img/admin/nav-bg.gif); background-position:bottom left; color:#999; }
-fieldset.collapsed .collapse-toggle { padding:3px 5px !important; background:#efefef; }
-fieldset.collapsed .collapse-toggle a { display:inline !important; }
 
 /* MESSAGES & ERRORS  */
 
